wrote out intro

--- a/index.html
+++ b/index.html
@@ -9,23 +9,27 @@
 
 </head>
 <body>
-    <!--full container-->
+    <!--outer quiz container-->
     <div class="container">
-    <!--top bar-->
-    <div class="topbar">
+        <!--top bar-->
+        <div class="topbar">
             <button>View High Scores</button>
             <p> Time: 00:00</p>
-    </div>
-    <!--inner container-->
+        </div>
+        <!--inner quiz container-->
         <div class="container1">
-            <!--intro to the quiz-->
-            <header class="intro">
-
-            </header>
+             <!--intro to the quiz-->
+             <header class="intro">
+                <h1>Coding Quiz Challenge</h1>
+                <p1>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by 10 seconds!</p1>
+             </header>
             <!--quiz questions-->
-
-         <div id="question1"></div>
-         <div id="question2"></div>
+            <main>
+                <div id="question1"></div>
+                <div id="question2"></div>
+                
+            </main>
+             
 
         </div>
     </div>
